plugins {
    id 'java'
    id 'org.springframework.boot' version '3.3.5'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.gg'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-web-services'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'

    //jwt
    implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
    implementation 'io.jsonwebtoken:jjwt-impl:0.11.5'
    implementation 'io.jsonwebtoken:jjwt-jackson:0.11.5'

    //mail
    implementation 'org.springframework.boot:spring-boot-starter-mail'

    // OAuth 2.0
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'

    //Feign Client
    implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
    implementation platform("org.springframework.cloud:spring-cloud-dependencies:2023.0.4")

    //s3
    implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'

    // OAuth 2.0
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'

    //Feign Client
    implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
    implementation platform("org.springframework.cloud:spring-cloud-dependencies:2023.0.4")

    //Redisson
    implementation 'org.redisson:redisson-spring-boot-starter:3.24.3'

    //Kafka
    implementation 'org.springframework.kafka:spring-kafka'
    implementation 'com.fasterxml.jackson.core:jackson-databind'

    implementation 'com.squareup.okhttp3:okhttp:4.12.0'

    testImplementation 'org.springframework.security:spring-security-test'
    compileOnly 'org.projectlombok:lombok'
    runtimeOnly 'com.mysql:mysql-connector-j'
    annotationProcessor 'org.projectlombok:lombok'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

    implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE' // S3

}

test {
    useJUnitPlatform()
}
